push everything that I should've pushed out

--- a/index.html
+++ b/index.html
@@ -19,130 +19,225 @@
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- <script src="script.js"></script> -->
         <script type="module">
 
-            // import kaboom lib
+            // import kaboom.js
             import kaboom from "https://unpkg.com/kaboom@3000.0.1/dist/kaboom.mjs";
 
-        
-             kaboom()
-              loadSprite("bean", "/image/froggy.jpeg")
+            // initialize kaboom context
+            kaboom();
+
+            // Adding game objects to screen
+
+// Start a kaboom game
+kaboom()
+
+// Load a sprite asset from "sprites/bean.png", with the name "bean"
+loadSprite("bean", "/image/bean.png")
 
 
-            // load a sprite "bean" from an image
-loadSprite("bean", "image/froggy.jpeg")
-//  add([
-//      image("froggy".jpeg),
-//      pos(80, 40),
-//  ])
-            setGravity(2400)
+// A "Game Object" is the basic unit of entity in kaboom
+// Game objects are composed from components
+// Each component gives a game object certain capabilities
 
-// const player = add([
-//     // List of components, each offers a set of functionalities
-//     sprite("mark"),
-//     pos(100, 200),
-//     area(),
-//     body(),
-//     health(8),
-//     // Plain strings are tags, a quicker way to let us define behaviors for a group
-//     "player",
-//     "friendly",
-//     // Components are just plain objects, you can pass an object literal as a component.
-//     {
-//         dir: LEFT,
-//         dead: false,
-//         speed: 240,
-//     },
-// ])
+// add() assembles a game object from a list of components and add to game, returns the reference of the game object
+const player = add([
+	sprite("bean"),   // sprite() component makes it render as a sprite
+	pos(120, 80),     // pos() component gives it position, also enables movement
+	anchor("center"), // anchor() component defines the pivot point (defaults to "topleft")
+])
 
-// player.move(player.dir.scale(player.speed))
-// })
-  //  onKeyPress("space", () => {
-    //    player.jump()
-// })
-
-// player.onCollide("tree", () => {
-//     destroy(player)
-// })
-const JUMP_FORCE = 1320
-const WALK_SPEED = 10
-
-
-addLevel ([
-    "                          $",
-    "                          $",
-    "           $$         =   $",
-    "  %      ====         =   $",
-    "                      =    ",
-    "       ^^      = >    =   &",
-    "===========================",
-], {
-    // "                          $",
-    // "                 $        $",
-    // "           $$    $    =   $",
-    // "  %      ====    $    =   $",
-    // "    $            $    =    ",
-    // "   ^ ^^^^      = >    =   &",
-    // "===========================",
-    // define the size of tile block
-    tileWidth: 32,
-    tileHeight: 32,
-    // // define what each symbol means, by a function returning a component list (what will be passed to add())
-     tiles: {
-         "=": () => [
-            sprite("floor"),
-            area(),
-            solid(),
-        ],
-        "$": () => [
-            sprite("coin.jpeg"),
-            area(),
-            pos(0, -9),
-        ],
-        "^": () => [
-            sprite("spike"),
-            area(),
-            "danger",
-        ],
-    }
+// .onUpdate() is a method on all game objects, it registers an event that runs every frame
+player.onUpdate(() => {
+	// .angle is a property provided by rotate() component, here we're incrementing the angle by 120 degrees per second, dt() is the time elapsed since last frame in seconds
+	player.angle += 120 * dt()
 })
 
-// 	// generate a random point on screen
-// // 	// width() and height() gives the game dimension
- 	const x = rand(0, width())
- 	const y = rand(0, height())
+// Add multiple game objects
+for (let i = 0; i < 3; i++) {
 
-// // 	// add([
-// 		// sprite("ghosty"),
-// 		// pos(x, y),
-// 	// ])
+	// generate a random point on screen
+	// width() and height() gives the game dimension
+	const x = rand(0, width())
+	const y = rand(0, height())
 
 
+    // Extend our game with multiple scenes
 
+// Start game
+kaboom()
 
+// Load assets
+loadSprite("bean", "/image/bean.png")
+loadSprite("coin", "/image/coin.png")
+loadSprite("spike", "/image/spike.png")
+loadSprite("grass", "/image/grass.png")
+loadSprite("portal", "/image/portal.png")
 
+setGravity(2400)
 
+const SPEED = 480;
 
+// Design 2 levels
+const LEVELS = [
+	[
+		"@  ^ $$ >",
+		"==========",
+	],
+	[
+		"@   $   >",
+		"=   =   =",
+	],
+]
 
+// Define a scene called "game". The callback will be run when we go() to the scene
+// Scenes can accept argument from go()
+scene("game", ({ levelIdx, score }) => {
 
+	// Use the level passed, or first level
+	const level = addLevel(LEVELS[levelIdx || 0], {
+		tileWidth: 64,
+		tileHeight: 64,
+		pos: vec2(100, 200),
+		tiles: {
+			"@": () => [
+				sprite("bean"),
+				area(),
+				body(),
+				anchor("bot"),
+				"player",
+			],
+			"=": () => [
+				sprite("grass"),
+				area(),
+				body({ isStatic: true }),
+				anchor("bot"),
+			],
+			"$": () => [
+				sprite("coin"),
+				area(),
+				anchor("bot"),
+				"coin",
+			],
+			"^": () => [
+				sprite("spike"),
+				area(),
+				anchor("bot"),
+				"danger",
+			],
+			">": () => [
+				sprite("portal"),
+				area(),
+				anchor("bot"),
+				"portal",
+			],
+		},
+	})
 
+	// Get the player object from tag
+	const player = level.get("player")[0]
 
+	// Movements
+	onKeyPress("up", () => {
+		if (player.isGrounded()) {
+			player.jump()
+		}
+	})
 
+	onKeyDown("left", () => {
+		player.move(-SPEED, 0)
+	})
 
+	onKeyDown("right", () => {
+		player.move(SPEED, 0)
+	})
 
+	player.onCollide("danger", () => {
+		player.pos = level.tile2Pos(0, 0)
+		// Go to "lose" scene when we hit a "danger"
+		go("lose")
+	})
 
+	player.onCollide("coin", (coin) => {
+		destroy(coin)
+		play("score")
+		score++
+		scoreLabel.text = score
+	})
 
+	// Fall death
+	player.onUpdate(() => {
+		if (player.pos.y >= 480) {
+			go("lose")
+		}
+	})
 
+	// Enter the next level on portal
+	player.onCollide("portal", () => {
+		play("portal")
+		if (levelIdx < LEVELS.length - 1) {
+			// If there's a next level, go() to the same scene but load the next level
+			go("game", {
+				levelIdx: levelIdx + 1,
+				score: score,
+			})
+		} else {
+			// Otherwise we have reached the end of game, go to "win" scene!
+			go("win", { score: score })
+		}
+	})
 
+	// Score counter text
+	const scoreLabel = add([
+		text(score),
+		pos(12),
+	])
 
+})
+
+scene("lose", () => {
+
+	add([
+		text("You Lose"),
+		pos(12),
+	])
+
+	// Press any key to go back
+	onKeyPress(start)
+
+})
+
+scene("win", ({ score }) => {
+
+	add([
+		text(`You grabbed ${score} coins!!!`, {
+			width: width(),
+		}),
+		pos(12),
+	])
+
+	onKeyPress(start)
+
+})
+
+function start() {
+	// Start with the "game" scene, with initial parameters
+	go("game", {
+		levelIdx: 0,
+		score: 0,
+	})
+}
+
+start()
+
+}
 
 
             </script>
-        <script>
-            // JS
 
 
-        </script>
+
+
+
     </body>
 </html>
