fix tiny mistake

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 kaboom()
 
 // Load a sprite asset from "sprites/bean.png", with the name "bean"
-loadSprite("bean", "/image/bean.png")
+loadSprite("bean", "image/bean.png")
 
 
 // A "Game Object" is the basic unit of entity in kaboom
